# xforwardai

./: CMakeLists.txt  README.md  question4.txt  question5.txt
src/q1/: answer.cpp
src/q2/: answer.cpp
src/q3/: answer.cpp
src/q4/: answer.cpp
src/q5/: answer.cpp
test_case/test_case_1/: 10.txt  11.txt  3.txt  4.txt  5.txt
test_case/test_case_3/: q3t2.txt  q3t3.txt
